# MLX-Video-OCR-DeepSeek-Apple-Silicon

./: .gitignore  AGENTS.md  README.md  README_EN.md  README_ES.md  README_ZH.md  api_utils.py  app.py  config.py  full_console_output_translation_latest.txt  i18n.py  preprocessing.py  pyproject.toml  requirements.txt  routes_ocr.py  routes_pdf.py  routes_preprocessing.py  routes_video.py  run.py  shared_state.py  spanish_implementation_status.md  start.sh  troubleshoot_ses1.md
docs/: ADD_SPANISH_LANGUAGE.md  GUIA_EJECUCION_LOCAL.md  GUIA_INICIO_RAPIDO.md  START_GUIDE.md  START_GUIDE_ES.md
mlx_deepseek_ocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mlx_video_ocr/: __init__.py  app.py  config.py  preprocessing.py
mlx_video_ocr/engines/: __init__.py  ocr_engine.py
mlx_video_ocr/routes/: __init__.py  ocr.py  pdf.py  preprocessing.py  video.py
mlx_video_ocr/utils/: __init__.py  api_utils.py  video_utils.py
static/: app.js
static/locales/en/: common.json  errors.json  messages.json  ui.json
static/locales/es/: common.json  errors.json  messages.json  ui.json
static/locales/zh/: common.json  errors.json  messages.json  ui.json
templates/: index.html
tests/: __init__.py  test_imports.py
